add dto, mapper and globalException, refactor service and controller, tests ok